<resources>
    <string name="app_name">CFP Exactly</string>
    <string name="search">Search</string>
    <string name="searchBT">Button</string>
    <string name="titleCFP">CFP Title</string>
    <string name="abbreviationCFP">CFP Abbreviation</string>
    <string name="urlCFP">CFP URL</string>
    <string name="chartCFP">CFP Chart</string>
    <string name="locationCFP">CFP Location</string>
    <string name="event_dateCFP">CFP Event Date</string>
    <string name="submission_deadlineCFP">CFP Submission Deadline</string>
    <string name="outlineCFP">CFP Outline</string>

    <string name="ReadMe">
        OUTLINE: \n
        welcome page \n
        search page \n
        search list page \n
        search result page
    </string>
    <string name="searchKeywords">Keywords here:</string>
    <string name="backMain">Main page</string>
    <string name="backSearchBar">Search bar</string>
    <string name="backList">Result List</string>
    <string name="searchReadme">
        Click "Search" to show \n
        1. Abbreviation \n
        2. Title of the CFP \n
        3. Top three most related tags\n
    </string>
    <string name="RESULT_OF">Results of</string>
    <string name="searchInput">Test</string>

</resources>