<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD000000"
    android:orientation="vertical">

    <Button
        android:id="@+id/backSearchBarBT"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/backSearchBar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#BEFFFFFF"
        android:textSize="14sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/resultOfText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RESULT_OF"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/searchInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchInput"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>